# toy_mail_classification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  exaluate.py  pyproject.toml  requirements.txt  setup.cfg  train.py
.github/workflows/: ci.yml  copilot-setup-steps.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: eval_config.yaml  train_config.yaml
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  text_features.py
src/models/: __init__.py  base_model.py  ensemble.py
tests/: __init__.py  test_api.py  test_models.py  test_preprocessing.py
